--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,3 +1,29 @@
+nav {
+  width: 100%;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 60px;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li a {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
+
+
+
 .in-Cart{
     background-color: red;
     font-size: 0.75rem;
