--- a/src/index.css
+++ b/src/index.css
@@ -22,13 +22,25 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+} */
+
+body {
+  /* margin-left: 10%;
+  margin-right: 10%; */
+  margin: 0;
+  display: flex;
+  place-items: center;
+  flex-direction: column;
+  min-width: 320px;
+  min-height: 100vh;
 }
+
 
 h1 {
   font-size: 3.2em;
