Se ejecutó la fase de admin. Se hizo un formulario de carga que permite subir mediante POST a la API, creando un recurso igual al del objeto JSON local. Luego se cambió en el fetch de itemListContainer la URL por la de MOckapi y se verificó el get, cuando se invoca a la Home

--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,3 +1,10 @@
+.container {
+  display: flex;
+  flex-wrap: wrap; 
+  align-items: stretch; /* <--- CRÍTICO: Estira los ítems flexibles */
+  gap: 10px;
+}
+
 .container h1 {
   text-align: center;
   padding: 3rem;
