--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,4 +1,7 @@
 .product-item {
+  display: flex;
+  flex-direction: column; /* Apila los elementos verticalmente */
+  height: 100%; /* <--- CRÍTICO: Usa toda la altura proporcionada por el contenedor padre */
   background-color: #1e1e1e; /* Gris más claro que el fondo */
   border: 1px solid #333;
   border-radius: 0.5rem;
@@ -7,12 +10,15 @@
   color: #f5f5f5;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+  gap: 1rem;
 }
 
 .product-item img {
-  width: 100%;
-  height: auto; /* mantiene proporción */
-  display: block;
+  /*width: 100%; */
+  /*height: auto; /* mantiene proporción */ 
+  height: 50%; /* mantiene proporción */
+  object-fit: cover; /* Asegura que la imagen cubra el espacio sin distorsionarse */
+  display: block; 
 }
 
 .product-item:hover {
@@ -27,7 +33,8 @@
 }
 
 .product-item p {
-  margin: 0.375rem 0; /* 6px */
+ /*flex-grow: 1; /* <--- CRÍTICO: Hace que este elemento tome todo el espacio vertical restante */
+  margin: 0.25rem 0; /* 6px */
 }
 
 .product-title {
