--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,7 +1,8 @@
-.item-list-container {
+.item-list {
   display: flex;
   justify-content: center;
   align-items: center;
+  align-items: stretch; /* <--- CRÍTICO: Estira los ítems flexibles */
   gap: 1rem;
   flex-wrap: wrap;
 }
