--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -5,4 +5,6 @@
   align-items: stretch; /* <--- CRÍTICO: Estira los ítems flexibles */
   gap: 1rem;
   flex-wrap: wrap;
+  row-gap: 50px;
+  /* margin-bottom: 120px; */
 }
