Alineo textos del header y del ItemlistContainer

--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,5 +1,5 @@
 .container {
-  display: flex;
+  /* display: flex; */
   flex-wrap: wrap; 
   align-items: stretch; /* <--- CRÍTICO: Estira los ítems flexibles */
   gap: 10px;
